[gd_scene load_steps=12 format=3 uid="uid://ca1cn4h542dlw"]

[ext_resource type="Script" uid="uid://b4eat4m65wc6b" path="res://Characters/Player/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bf4skbn13wfik" path="res://Systems/camera_zoom.gd" id="2_onrkg"]
[ext_resource type="Script" uid="uid://bn0mmrwtek40t" path="res://Systems/UserInterface/Hover/hover_tooltip_manager.gd" id="3_cue0d"]
[ext_resource type="Script" uid="uid://wbashbey3sr4" path="res://Characters/Player/player_inventory.gd" id="4_osktb"]
[ext_resource type="Script" uid="uid://b71tbpgm3af3v" path="res://Characters/Player/player_stats.gd" id="5_7vev3"]
[ext_resource type="Script" uid="uid://c71hoe61fu77f" path="res://Characters/Player/player_movement.gd" id="6_7vev3"]
[ext_resource type="Script" uid="uid://chfai5a0xifgt" path="res://Characters/Player/player_combat.gd" id="6_klx3t"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_onrkg"]

[sub_resource type="BoxMesh" id="BoxMesh_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hqtel"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4flbx"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
script = ExtResource("1_4flbx")
hero_name = "My Hero"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.812268, 0, 0, 0, 1, 0, 1.3003498, 0)
mesh = SubResource("CapsuleMesh_onrkg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.23024231, 0, 0, 0, 0.27720964, 0, 0, 0, 0.62820095, 0, 0.60965717, -0.4491837)
mesh = SubResource("BoxMesh_i3pqv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.075, 0, 0, 0, 0.8759783, 0, 0, 0, 1.075, -2.8312206e-06, 1.3045897, -4.9829483e-05)
shape = SubResource("CapsuleShape3D_hqtel")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 1.3596594, 0)
shape = SubResource("SphereShape3D_4flbx")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1.25, 0, 0, 0, 0.049421635, 1.2490226, 0, -1.2490226, 0.049421635, 0, 48.462124, 0.5)
current = true
fov = 10.0
far = 800.0
script = ExtResource("2_onrkg")

[node name="Camera3D-angle" type="Camera3D" parent="."]
transform = Transform3D(1.25, 0, 0, 0, 0.47048068, 1.1580794, 0, -1.1580794, 0.47048068, 0, 121.0958, 72.72221)
fov = 20.0
far = 800.0

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="AudioVocal" type="AudioStreamPlayer3D" parent="."]

[node name="AudioCombat" type="AudioStreamPlayer3D" parent="."]

[node name="HoverTooltipManager" type="Node" parent="." node_paths=PackedStringArray("camera") groups=["tooltip_manager"]]
script = ExtResource("3_cue0d")
camera = NodePath("../Camera3D")
tooltip_delay = 0.0

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource("4_osktb")

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("5_7vev3")

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("6_7vev3")

[node name="PlayerCombat" type="Node" parent="."]
script = ExtResource("6_klx3t")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
